[package]
name = "affected-tests-ts"
version = "0.1.0"
edition = "2024"
autobins = false

[features]
test-support = []

[lints]
workspace = true

[[bin]]
name = "affected-tests-ts"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
globset = "0.4.18"
ignore = "0.4.26"
oxc_allocator = "0.137.0"
oxc_ast = "0.137.0"
oxc_ast_visit = "0.137.0"
oxc_parser = "0.137.0"
oxc_span = "0.137.0"
oxc_syntax = "0.137.0"
ratatui = "0.30.2"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"

[workspace]

[workspace.lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"
indexing_slicing = "deny"
wildcard_enum_match_arm = "deny"
